src/objects/DRDW_NDBM_Category__c.object
<CustomObject>
    <description>This Object Contain details related to Non-Discretionary Budget Master Category</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alloc</fullName>
                </value>
                <value>
                    <fullName>C&amp;B</fullName>
                </value>
                <value>
                    <fullName>Cnslt</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Dep/Amort</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>TTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRDW_ND_Budget_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW ND Budget Master</label>
        <referenceTo>DRDW_ND_Budget_Master__c</referenceTo>
        <relationshipLabel>DRDW NDBM Category</relationshipLabel>
        <relationshipName>DRDW_NDBM_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Discretionary_Year_Total__c</fullName>
        <formula>ROUND(Q1__c  +  Q2__c  +  Q3__c  +  Q4__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Discretionary Year Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRDW NDBM Category</label>
    <nameField>
        <displayFormat>ND-{0000}</displayFormat>
        <label>Non-Discretionary Budget Master Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW NDBM Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>